2015-06-24  James Anderson  <anderson@gfz-potsdam.de>

	* utils/compareDiFXims.c:
	* utils/genmachines.py:
	* src/calcif2.c:
	* utils/startdifx:
	* src/difxcalc.c:
	* src/difxcalcrotation.h:
	* src/difxcalc.h: bugfixes for RadioAstron

2015-05-15  James Anderson  <anderson@gfz-potsdam.de>

	* src/difxcalc.h:
	* src/calcif2.c:
	* src/difxcalc.c: bugfixes

2015-05-06  James Anderson  <anderson@gfz-potsdam.de>

	* src/calcif2.c:
	* src/difxcalc.c: bugfixes

2015-05-04  James Anderson  <anderson@gfz-potsdam.de>

	* src/CALC_xdr.c: Revert to prior version

	* src/calcif2.c:
	* src/difxcalc.c:
	* src/Makefile.am: Bugfixes to make things compile

	* src/DiFX_Delay_Server_xdr.c: Update to new version

2015-04-29  James Anderson  <anderson@gfz-potsdam.de>

	* src/calcif2.c:
	* src/difxcalc.h:
	* src/difxcalc.c: updates to handle new DiFX_Delay_Server RPC
	calls to fill delay model parameters data for FITS CT table

2015-04-13  James Anderson  <anderson@gfz-potsdam>

	* src/MATHCNST.H:
	* src/difxcalc.h:
	* src/calcif2.c:
	* src/difxcalc.c: updates to handle new DiFX_Delay_Server RPC calls

	* src/checkdifxcalcrotation.c:
	* src/difxcalcrotation.c: create to handle rotation stuff for
	calcif2 for new DiFX_Delay_Server RPC calls

calcif2
~~~~~~~
Version ?.?.?
* updates for space VLBI support, transmitting spacecraft information to
	the calcserver and retrieving extra information


Version 2.5.0
* Post DiFX 2.4
* move difxsniff to SniffTools

Version 2.3.0
* vlog: split ANTAB file into antenna-specific files
* Version for DiFX-2.3, Dec 20, 2013
* Left unchanged for DiFX-2.4, Nov 4, 2014

Version 2.2.0
* Fix azimuth polynomial interpolation in case of wrap (John Morgan)
* Option to evaluate quality of delay interpolation (use -O 2 (or higher) and -v)
* Add polynomial fitting option (-F) .  This will take more CALC samplings than needed and fit
  a constrained polynomial (endpoints fixed) to that data.  This seems to produce marginally